{
    "name": "Besturing",
    "maps": [
        {
            "name": "SpelerBeweging",
            "id": "d97f451e-b11f-4671-9177-6ad6642cf81f",
            "actions": [
                {
                    "name": "Speler1 Beweging",
                    "type": "PassThrough",
                    "id": "ac89215c-ae81-4072-af55-cddcde511abf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Speler2 Beweging",
                    "type": "PassThrough",
                    "id": "8fd14186-4201-4f03-9b46-e63a46e1e67d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "aabe84bb-71e7-4dd1-ac8a-f0c39a4896ce",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Speler2 Beweging",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0edf0ced-473a-4614-95c6-0a1026657f2c",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Speler2 Beweging",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0d328f52-011d-408e-80b4-83f1c14fcbec",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Speler2 Beweging",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2b5e093f-4397-4d0e-99a3-2b409ce36072",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Speler2 Beweging",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c28cc614-dc7b-4f2f-ad9a-c81552f36428",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Speler2 Beweging",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "a212b8ec-4c0d-44ea-9def-68c5f923f4b8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Speler1 Beweging",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "aa5d0d55-d8a9-41e6-845a-4a73dcca1ab5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Speler1 Beweging",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b5c85739-9a1c-40f2-9eef-6da41aeeeb9e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Speler1 Beweging",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2f075c2d-dfa8-4b46-90dd-30260840aa3c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Speler1 Beweging",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "386b315e-6417-45da-9dbd-173d35416b0e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Speler1 Beweging",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "ZomerSpeler1A",
            "id": "4dcfaf54-86a2-47e4-9b75-25be7a1c656c",
            "actions": [
                {
                    "name": "Knop1",
                    "type": "Value",
                    "id": "05babbe1-0bee-45e6-bdaa-2f4cf37ec200",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "91b075d4-a1a8-428c-aa40-9bbf99460798",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Knop1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ZomerSpeler1B",
            "id": "eabc1a45-1def-42e3-bf26-1b88aed06cb4",
            "actions": [
                {
                    "name": "Knop1",
                    "type": "Button",
                    "id": "f2883ea1-da68-482c-a5f5-bcb2d7813be5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Knop2",
                    "type": "Button",
                    "id": "16520a60-61e3-41d2-b377-1b93838d0ae7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "61ceeae3-827d-4caa-b7c0-9e490013086d",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Knop1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f26e1f3-afeb-4099-9d37-524916b28ed9",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Knop2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ZomerSpeler1C",
            "id": "fce2d4be-edeb-4012-89fb-30187b8d91a2",
            "actions": [
                {
                    "name": "Knop1",
                    "type": "Value",
                    "id": "62d86df5-dce3-4ce9-a0b7-8fd24c41b206",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Knop2",
                    "type": "Value",
                    "id": "982142f7-de4a-41ab-b638-71f0877b31c4",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Knop3",
                    "type": "Value",
                    "id": "959bf447-1cdc-44b4-9119-45caa03b7a2b",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6081c818-2dfd-425f-91ad-08f3cd187a86",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Knop1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e16844c-136a-4b32-bef9-3573358188de",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Knop2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ba9f985-4319-4e42-82b5-16d90455d222",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Knop3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ZomerSpeler2A",
            "id": "4b2c50f2-c5f7-4ed9-b3d4-e75227f3ad87",
            "actions": [
                {
                    "name": "Knop1",
                    "type": "Value",
                    "id": "7c6baacf-0d1e-43b7-a10d-213d8de50e63",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "002a3212-d3e4-4119-b8c3-588a3ea54c28",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Knop1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ZomerSpeler2B",
            "id": "035fe114-71a7-4559-97c7-9cbccc0a4366",
            "actions": [
                {
                    "name": "Knop1",
                    "type": "Button",
                    "id": "467249e1-c54a-4b76-8956-6e7e18f15917",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Knop2",
                    "type": "Button",
                    "id": "db4a5ecd-6596-4361-9dec-4d2acac56e3a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3e29feec-fe69-40b5-a885-fe8ece0409ec",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Knop1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "311270cb-e189-44fc-be1c-41375528b614",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Knop2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ZomerSpeler2C",
            "id": "a7aeb3b9-9064-45c9-ba15-722e7f900454",
            "actions": [
                {
                    "name": "Knop1",
                    "type": "Value",
                    "id": "d84c0b9d-61a3-4dcd-9e1f-93797249f20f",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Knop2",
                    "type": "Value",
                    "id": "a77cab4c-6fa2-4f0e-a1ee-af7bb8ce3178",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Knop3",
                    "type": "Value",
                    "id": "ba5bc19e-2c42-42d1-b27e-de797f69a498",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8ba74d4a-56de-4cc4-b1fe-d64d75ef8e48",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Knop1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4e9ca09-2574-40bd-9219-5c75418c7ee8",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Knop2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e344096-f028-4f6d-a0a6-22df396500fa",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Knop3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Toetsenbord",
            "bindingGroup": "Toetsenbord",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}